--- a/app/views/templates/base.html
+++ b/app/views/templates/base.html
@@ -49,6 +49,10 @@
                             <li><a class="dropdown-item" href="{{ url_for('market.oi_history_page') }}">
                                 <i class="fas fa-history me-1"></i>OI Change History
                             </a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('market.strategy_analysis_page') }}">
+                                <i class="fas fa-chart-bar me-1"></i>Strategy Analysis
+                            </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
