--- a/app/views/templates/base.html
+++ b/app/views/templates/base.html
@@ -53,11 +53,20 @@
                             <li><a class="dropdown-item" href="{{ url_for('market.strategy_analysis_page') }}">
                                 <i class="fas fa-chart-bar me-1"></i>Strategy Analysis
                             </a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('market.all_oi_analysis_page') }}">
+                                <i class="fas fa-table me-1"></i>All OI Analysis
+                            </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('market.nifty_prices') }}">
                             <i class="fas fa-list me-1"></i>Price History
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('market.nifty_stocks_page') }}">
+                            <i class="fas fa-building me-1"></i>NIFTY 50 Stocks
                         </a>
                     </li>
                     <li class="nav-item dropdown">
