all the data butification done

--- a/app/views/templates/base.html
+++ b/app/views/templates/base.html
@@ -18,11 +18,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    {% if request.endpoint != 'auth.login' %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('market.dashboard') }}">
+                    {% if True %}  <!-- Temporarily always show menu -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-home me-1"></i>Dashboard
                         </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ url_for('market.dashboard') }}">
+                                <i class="fas fa-chart-line me-1"></i>Classic Dashboard
+                            </a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('market.dashboard_new') }}">
+                                <i class="fas fa-tachometer-alt me-1"></i>Advanced Dashboard
+                            </a></li>
+                        </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="optionsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
