--- a/app/views/templates/oi_changes.html
+++ b/app/views/templates/oi_changes.html
@@ -3,6 +3,9 @@
 {% block title %}OI Changes - Top Active{% endblock %}
 
 {% block content %}
+<!-- Date Filter Component -->
+{% include 'components/datetime_filter.html' %}
+
 <div class="container-fluid">
     <!-- Header -->
     <div class="row mb-4">
