--- a/app/views/templates/nifty_prices.html
+++ b/app/views/templates/nifty_prices.html
@@ -3,6 +3,9 @@
 {% block title %}Nifty Prices{% endblock %}
 
 {% block content %}
+<!-- Date Filter Component -->
+{% include 'components/datetime_filter.html' %}
+
 <div class="row">
     <div class="col-md-12">
         <div class="d-flex justify-content-between align-items-center mb-4">
