--- a/app/views/templates/oi_analysis.html
+++ b/app/views/templates/oi_analysis.html
@@ -29,6 +29,9 @@
 {% endblock %}
 
 {% block content %}
+<!-- Date Filter Component -->
+{% include 'components/datetime_filter.html' %}
+
 <div class="container-fluid">
     <div class="row mb-3">
         <div class="col-md-12">
